--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<title>Railworks2's Discord</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
-    <p>railworks2#0001</p>
-    <p>174898625858633728<p>
-  </body>
+  	</head>
+  	<body>
+    	<p>Username: railworks2#0001</p>
+    	<p>UserID: 174898625858633728<p>
+		<p>Verify all my identites @ verify.railworks2.co.uk</p>
+  	</body>
 </html>
