--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   	<body>
     	<p>Username: railworks2#0001</p>
     	<p>UserID: 174898625858633728<p>
-		<p>Verify all my identites @ verify.railworks2.co.uk</p>
+		<p>Verify all my identities @ verify.railworks2.co.uk</p>
   	</body>
 </html>
