--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Railworks2's Discord</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-  	</head>
-  	<body>
-    	<p>Username: railworks2#0001</p>
-    	<p>UserID: 174898625858633728<p>
+
+<head>
+	<title>Railworks2's Discord</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<style>
+		h5 {
+			font-size: 30px;
+		}
+
+		body {
+			text-align: center;
+			padding: 50px;
+			background-color: white;
+			font: 20px Helvetica, sans-serif;
+			color: black;
+		}
+
+		div {
+			position:relative;
+			margin: auto;
+			top: -10%;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			width: 650px;
+			height: 450px;
+		}
+	</style>
+</head>
+
+<body>
+	<div>
+		<h5>Personal Discord</h5>
+		<p>Username: railworks2#0001</p>
+		<p>UserID: 174898625858633728
+		<p>
+
+		<h5>Professional Discord</h5>
+		<p>Username: railworks#0002</p>
+		<p>UserID: 710567076598906991</p>
+
 		<p>Verify all my identities @ verify@railworks2.co.uk</p>
-  	</body>
+
+	</div>
+
+</body>
+
 </html>
