Updated file to include archived discord name and updated personal account.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		body {
 			text-align: center;
 			padding: 50px;
-			background-color: white;
+			background-color: black;
 			font: 20px Helvetica, sans-serif;
-			color: black;
+			color: white;
 		}
 
 		div {
@@ -39,10 +39,14 @@
 		<p>
 
 		<h5>Personal Discord</h5>
-		<p>Username: railworks#0002</p>
+		<p>Username: rail#0001</p>
 		<p>UserID: 710567076598906991</p>
 
-		<p>Verify all my identities @ verify@railworks2.co.uk</p>
+		<p>Verify all my identities @ <a href="https://verify.railworks2.com/">verify.railworks2.com</a></p>
+		
+		<h5>Archived account list</h5>
+		<p>Account exists for backwards compatibility and may not result in any interaction</p>
+		<p>railworks#0002 - 760217831324516402</p>
 
 	</div>
 
